small work with swagger